--- a/hawkhack2025/package.json
+++ b/hawkhack2025/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
