--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://HawkHack.ccmsu.org",
-  "name": "HawkHack2025",
+  "name": "hawkhack2025",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
