changed CNAME and react dependancy to HawkHack.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ccmsu.org/HawkHack2025",
+  "homepage": "https://HawkHack.ccmsu.org",
   "name": "hawkhack2025",
   "version": "0.1.0",
   "private": true,
